tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__regular_polygon__hexagon_with_center_and_radius.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[RegularPolygon[{0.5, 0.5}, 0.3, 6]]\")"
---
<svg width="360" height="416" viewBox="0 0 360 416" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x416"><rect x="0" y="0" width="360.00" height="416.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x416)">
<polygon points="180.00,15.55 13.33,111.77 13.33,304.23 180.00,400.45 346.67,304.23 346.67,111.77" fill="rgb(0,0,0)"/>
</g>
</svg>
