tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__regular_polygon__pentagon.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[RegularPolygon[5]]\")"
---
<svg width="360" height="342" viewBox="0 0 360 342" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x342"><rect x="0" y="0" width="360.00" height="342.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x342)">
<polygon points="180.00,12.67 13.52,133.62 77.11,329.33 282.89,329.33 346.48,133.62" fill="rgb(0,0,0)"/>
</g>
</svg>
