tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__regular_polygon__triangle.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[RegularPolygon[3]]\")"
---
<svg width="360" height="312" viewBox="0 0 360 312" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x312"><rect x="0" y="0" width="360.00" height="312.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x312)">
<polygon points="180.00,11.66 13.33,300.34 346.67,300.34" fill="rgb(0,0,0)"/>
</g>
</svg>
